@@ -33,6 +33,7 @@ SUBDIRS = \
 
 EXTRA_DIST = \
 	ChangeLog.1 \
+	ChangeLog.2 \
 	INSTALL.ja \
 	README.ja \
 	TiMidity-uj.ad.in \
